<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY appname "Android-Digitalent">]>

<resources>
  <string name="app_name">&appname;</string>
  <string name="account">Account</string>
  <string name="setting_language">Setting Language</string>
  <string name="movie">Movie</string>
  <string name="tv_show">Tv Show</string>
  <string name="vote_count">Vote Count :</string>
 <string name="release_date">Release Date :</string>
  <string name="please_try_again">Please try again</string>
  <string name="no_connection">Please check your internet connection</string>
  <string name="favorite_movie">Favorite Movie</string>
  <string name="favorite_tvshow">Favorite Tv Show</string>
  <string name="no_favorite">No Favorite</string>

  <string name="search_movie">Search Movie</string>
  <string name="search_tvshow">Search Tv Show</string>
  <string name="reminder">Reminder</string>
  <string name="release_reminder">Release Reminder</string>
  <string name="release_reminder_desc">Reminder showing the movie that released today</string>
  <string name="daily_reminder">Daily Reminder</string>
  <string name="daily_reminder_desc">Reminder for return to app</string>
  <string name="daily_reminder_notif_message">&appname; Missing you</string>
  <string name="movie_has_release">%1$s has been release today</string>
  <string name="data_unavailable">Data unavailable</string>

</resources>