<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
    android:id="@+id/menuSearch"
    android:actionLayout="@layout/item_menu_search_movie"
    android:orderInCategory="40"
    android:title="@string/search_movie"
    app:showAsAction="ifRoom"/>
  <item
    android:id="@+id/menuReminder"
    android:icon="@drawable/ic_reminder"
    android:iconTint="@android:color/white"
    android:title="@string/reminder"
    app:iconTint="@android:color/white"
    app:showAsAction="never" />
  <item
    android:id="@+id/menuLanguage"
    android:title="@string/setting_language"
    app:showAsAction="never" />
  <item
    android:id="@+id/menuAccount"
    android:title="@string/account"
    app:showAsAction="never" />
</menu>