<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.widget.ReminderActivity">

  <androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    style="@style/Toolbar"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <LinearLayout
    android:id="@+id/lyRelease"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/toolbar">

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/txtReleaseTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/release_reminder"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintTop_toBottomOf="@+id/toolbar" />
    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/txtReleaseDesc"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/release_reminder_desc" />
  </LinearLayout>

  <androidx.appcompat.widget.SwitchCompat
    android:id="@+id/swRelease"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    app:layout_constraintBottom_toBottomOf="@+id/lyRelease"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toEndOf="@+id/lyRelease"
    app:layout_constraintTop_toTopOf="@+id/lyRelease" />
  <LinearLayout
    android:id="@+id/lyDaily"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="28dp"
    android:orientation="vertical"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/lyRelease">

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/txtDailyTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/daily_reminder"
      android:textSize="18sp"
      android:textStyle="bold" />
    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/txtDailyDesc"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/daily_reminder_desc" />
  </LinearLayout>

  <androidx.appcompat.widget.SwitchCompat
    android:id="@+id/swDaily"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    app:layout_constraintBottom_toBottomOf="@+id/lyDaily"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toEndOf="@+id/lyDaily"
    app:layout_constraintTop_toTopOf="@+id/lyDaily" />

</androidx.constraintlayout.widget.ConstraintLayout>
